--- a/src/main/resources/templates/question_form.html
+++ b/src/main/resources/templates/question_form.html
@@ -1,10 +1,9 @@
 <html layout:decorate="~{layout}">
 <div layout:fragment="content" class="container">
 	<h5 class="my-3 border-bottom pb-2">질문 등록</h5>
+	<!-- form태그 입력 항목을 바인딩 하기 위해선 th:object 속성을 이옹해야한다. -->
 	<form th:action="@{/question/create}" th:object="${questionForm}" method="post">
-		<div class="alert alert-danger" role="alert" th:if="${#fields.hasAnyErrors()}">
-			<div th:each="err : ${#fields.allErrors()}" th:text="${err}"/>
-		</div>
+		<div th:replace="~{form_errors :: formErrorsFragment}"></div>
 		<div class="mb-3">
 			<label for="subject" class="form-label">제목</label>
 			<input type="text" th:field="*{subject}" class="form-control">
